# rp2350-monitor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: firmware-build.yml  release.yml
docs/: architecture.md  control_protocol.md  debug_probe.md  logic_analyzer.md  reliability.md  resource_limits.md
firmware/include/: DAP_config.h  lwipopts.h  tusb_config.h
firmware/include/rpmon/: config.h
firmware/include/rpmon/core/: channel_manager.h  command_processor.h  config_store.h  event_bus.h  logic_analyzer.h  pin_manager.h
firmware/include/rpmon/drivers/: can_channel.h  channel.h  gpio_channel.h  i2c_channel.h  spi_channel.h  uart_channel.h
firmware/include/rpmon/net/: dhcp_server.h  dns_server.h  wifi_manager.h
firmware/include/rpmon/probe/: debug_probe.h
firmware/include/rpmon/transport/: http_server.h  tcp_transport.h  usb_transport.h
firmware/include/rpmon/util/: hex.h  json.h
firmware/src/: main.cpp
firmware/src/core/: channel_manager.cpp  command_processor.cpp  config.cpp  config_store.cpp  event_bus.cpp  logic_analyzer.cpp  pin_manager.cpp
firmware/src/drivers/: can_channel.cpp  gpio_channel.cpp  i2c_channel.cpp  spi_channel.cpp  uart_channel.cpp
firmware/src/net/: dhcp_server.cpp  dns_server.cpp  wifi_manager.cpp
firmware/src/probe/: debug_probe.cpp  swd_probe.pio
firmware/src/transport/: http_server.cpp  tcp_transport.cpp  usb_descriptors.c  usb_transport.cpp
firmware/src/util/: hex.cpp  json.cpp
tools/: rpmon_cli.py  rpmon_logic.py  rpmon_logic_loopback_test.py  rpmon_wifi_logic_test.py
ui/: README.md  index.html  package.json
ui/bridge/: rpmon_bridge.py
ui/docs/: ai-operation-contract.md
ui/src/: app.js  client.js  main.js  schema.js  styles.css
